setup basic redux stuff for trello like app

--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -11,9 +11,9 @@
   @include flex-centered();
 }
 
-.list {
-  @include flex-column();
-  justify-content: center;
+.lists {
+  @include flex-row();
+  @include flex-centered();
 }
 
 .title {
